# finhan

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: quality.yml
adapters/: bepost.py  test_bepost.py
demo-data/: obfuscate.sh
src/: dummy.py
src/finhan/: account.py  account_names.py  adapter_table.py  main.py  test_account.py  test_adapter_table.py  test_main.py  transaction.py
src/finhan/adapter_bepost/: conftest.py  csv_extract_account_names.py  csv_merge.py  csv_transactions.py  test_csv_extract_account_names.py  test_csv_merge.py  test_csv_transactions.py
src/finhan/adapters/: bepost.py  test_bepost.py
tests_e2e/: fuzzy_search.py  test_finhan_table.py  test_the_test_fuzzy_search.py
tests_e2e/demo-data/: obfuscate.sh
