[tool.poetry]
name = "finhan"
version = "0.1.0"
description = "Financial Projection for individuals and households"
authors = ["xtofl"]
license = "LGPL"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
