[tool.poetry]
name = "finhan"
version = "1.0.0-alpha.0"
description = "Financial Projection for individuals and households"
authors = ["xtofl"]
license = "LGPL"
packages = [
    { include = "finhan", from ="src" }
]

[tool.poetry.scripts]
finhan-view = "finhan.main:main"
finhan-bepost-csvs = "finhan.adapters.bepost_merge_csv_files:main"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
PyYAML = "^5.4.1"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
